kubernetes/apps/kube-system/cilium/policies/allow-prometheus-ingress.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-prometheus-ingress
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
            - port: "9100"
              protocol: TCP
            - port: "9153"
              protocol: TCP
            - port: "9402"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "8081"
              protocol: TCP
            # longhorn-manager
            - port: "9500"
              protocol: TCP
            # cilium-agent
            - port: "9962"
              protocol: TCP
            # cilium-agent envoy-metrics
            - port: "9964"
              protocol: TCP
            # hubble metrics
            - port: "9965"
              protocol: TCP
            # cilium-operator
            - port: "9963"
              protocol: TCP
            # envoy-gateway
            - port: "19001"
              protocol: TCP
            # external-dns
            - port: "7979"
              protocol: TCP
            # authentik
            - port: "9300"
              protocol: TCP
            # kube-green controller-manager
            - port: "8443"
              protocol: TCP
            # metrics-server
            - port: "10250"
              protocol: TCP
            # echo
            - port: "80"
              protocol: TCP
            # blackbox-exporter
            - port: "9115"
              protocol: TCP
